:art: refactor(translation):优化百度和国内大模型翻译API实现
- 改进百度API配置读取逻辑，增加空值检查和调试日志- 更新国内大模型翻译API，支持直接传参调用和默认模型配置-修复HTTP请求URL创建方式，统一使用URI.create().toURL()防止编码问题
- 增强API验证功能，提供更详细的错误信息和友好的用户提示
-优化Jenkins文件类型注册方式，移除废弃的文件名匹配器实现
- 改进语法高亮器实现，使用默认主题颜色提升兼容性
- 完善设置界面验证逻辑，直接使用界面输入值进行测试避免配置污染- 添加详细的调试日志便于问题排查和配置验证